--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,19 +2,26 @@ name: Docker Build and Publish
 
 on:
   push:
-    branches: [ "master" ]
-
-# 明确赋予写入权限
-permissions:
-  contents: read
-  packages: write
+    branches: ["master"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    # 将权限声明放在 job 级别
+    permissions:
+      contents: read
+      packages: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      # 添加 Docker 编译插件 (QEMU 和 Buildx)
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -28,5 +35,7 @@ jobs:
         with:
           context: .
           push: true
-          # 直接使用全小写的地址，避开所有变量干扰
+          # 强制全小写地址
           tags: ghcr.io/sennagi/mgaide-api-go:latest
+          # 禁用缓存以防万一
+          no-cache: true
